--- a/Node_06/package.json
+++ b/Node_06/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "init": "^0.1.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "path": "^0.12.7"
