--- a/Node_FoodV3/package.json
+++ b/Node_FoodV3/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "node-schoolv2",
+  "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "start": "node ./bin/www"
@@ -8,6 +11,7 @@
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "pug": "^3.0.2"
   }
 }
