--- a/Node_BBS_V2/package.json
+++ b/Node_BBS_V2/package.json
@@ -11,6 +11,8 @@
     "debug": "~4.3.4",
     "express": "~4.18.2",
     "http-errors": "~2.0.0",
+    "moment": "^2.29.4",
+    "momnet": "^2.29.1",
     "mongodb": "^4.12.0",
     "mongoose": "^6.7.3",
     "morgan": "~1.10.0",
